feat(doc): changed setMyUserName endpoint
feat(frontend): changed setMyUsername validation, added keyup enter to create chat modal
